[package]
name = "token-chain-extension"
description = "Chain extensions for tokens pallet"
authors = ["Pendulum"]
edition = "2021"
version = "1.6.0-d"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
chain-extension-common = { path = "../common", default-features = false }

# Substrate
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-tracing = { workspace = true }
sp-weights = { workspace = true }
pallet-balances = { workspace = true }
pallet-contracts = { workspace = true }

# Open Runtime Module Library
orml-currencies = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }

# Custom libraries for Spacewalk
spacewalk-primitives = { workspace = true }

# Pendulum Pallets
orml-currencies-allowance-extension = { path = "../../pallets/orml-currencies-allowance-extension", default-features = false }

[features]
default = [
    "std",
]
std = [
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-traits/std",
    "orml-tokens/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-tracing/std",
    "sp-weights/std",
    "orml-currencies-allowance-extension/std",
    "pallet-contracts/std",
    "frame-system/std",
    "spacewalk-primitives/std",
    "chain-extension-common/std",
    "sp-std/std",
    "pallet-balances/std"
]
