[package]
name = "psp22_pendulum"
version = "1.6.0"
authors = ["pendulum-chain"]
edition = "2021"

[dependencies]
ink = { tag = "v4.0.1", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
# sp_core = {version = "1" }
# ethnum = { version = "1", features = ["llvm-intrinsics"] }
ethnum = { version = "1", features = ["macros"] }

# These dependencies
# brush = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22"], branch = "feature/psp22-extension-pallet-assets" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    # "brush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
