[package]
authors = ["Pendulum Chain"]
edition = "2021"
name = "orml-currencies-allowance-extension"
version = "1.6.0-c"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

orml-currencies = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }
pallet-balances = { workspace = true, optional = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
sp-io = { workspace = true }

pallet-balances = { workspace = true, default-features = true }


[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"sha2/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"frame-benchmarking/std",
	"scale-info/std",
	"sp-io/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances?/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]

try-runtime = [
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"frame-support/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"sp-runtime/try-runtime"
]
