[package]
authors = ["727.Ventures <green@727.ventures>"]
edition = "2021"
name = "orml-tokens-chain-ext"
version = "0.1.1"

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
obce = { git = "https://github.com/727-Ventures/obce", branch = "polkadot-v0.9.37", default-features = false }

# Substrate deps
orml-tokens = {git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
orml-tokens-allowance = {path = "../../pallets/orml-tokens-allowance", default-features = false}

# Ink deps
ink = {  git = "https://github.com/paritytech/ink", rev ="4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }

[features]
default = ["std"]
substrate = [
	"obce/substrate",
	"orml-tokens",
]
ink-lang = [
	"obce/ink",
	"ink",
]
std = [
	"scale-info/std",
	"scale/std",
  	"orml-tokens/std",
]
substrate-std = [
	"std",
	"substrate",
	"obce/substrate-std",
	"orml-tokens/std",
]
ink-std = [
	"std",
	"ink-lang",
	"obce/ink-std",
	"ink",
]
runtime-benchmarks = [
	"obce/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
]