[package]
authors = ["Pendulum Chain"]
edition = "2021"
name = "orml-tokens-management-extension"
version = "1.1.0"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

orml-currencies = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
frame-benchmarking = { workspace = true, default-features = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true, default-features = true }
# Spacewalk libraries
spacewalk-primitives = { workspace = true}


[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "sha2/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "frame-benchmarking/std",
    "spacewalk-primitives/std"
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
]
