[package]
authors = ["KILT <info@kilt.io>"]
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"
edition = "2021"
name = "parachain-staking"
version = "1.7.2"

[dev-dependencies]

[dependencies]
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.142", default-features = false }
module-pallet-staking-rpc-runtime-api = { path = "./rpc/runtime-api", default-features = false }

frame-support = { version = "23.0.0", default-features = false }
frame-system = { version = "23.0.0", default-features = false }
pallet-authorship = { version = "23.0.0", default-features = false }
pallet-balances = { version = "23.0.0", default-features = false }
pallet-session = { version = "23.0.0", default-features = false }
sp-api = { version = "21.0.0", default-features = false }
sp-runtime = { version = "26.0.0", default-features = false }
sp-staking = { version = "21.0.0", default-features = false }
sp-std = { version = "10.0.0", default-features = false }

pallet-aura = { version = "22.0.0", default-features = false }
pallet-timestamp = { version = "22.0.0", default-features = false }
sp-consensus-aura = { version = "0.27.0", default-features = false }
sp-core = { version = "23.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false }

# benchmarking
frame-benchmarking = { version = "23.0.0", default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
std = [
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "module-pallet-staking-rpc-runtime-api/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    "pallet-aura/std",
    "pallet-timestamp/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-io/std",
]
try-runtime = [
    "frame-support/try-runtime",
]
