[package]
authors = ["KILT <info@kilt.io>"]
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"
edition = "2021"
name = "parachain-staking"
version = "1.6.0-b"

[dev-dependencies]
pallet-aura = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_derive = { workspace = true }
sp-api = { workspace = true }
module-pallet-staking-rpc-runtime-api = { path = "./rpc/runtime-api", default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-arithmetic = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks"
]
std = [
	"serde/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"module-pallet-staking-rpc-runtime-api/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-session/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-benchmarking?/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime"
]
