[package]
name = "pallet-stellar-bridge"
version = "0.1.0"
authors = ["Gonza <gonzalo@satoshipay.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
parking_lot = '0.11'
# https://github.com/serde-rs/json/pull/606
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
hex = { version = "0.4", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Substrate packages
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16", optional = true }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16"}
substrate-stellar-sdk = { git = "https://github.com/pendulum-chain/substrate-stellar-sdk", branch = "polkadot-v0.9.16", default-features = false, features=['offchain'] }
base64 = { version = '0.13.0', default-features = false, features = ['alloc'] }

orml-currencies = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update" }
orml-utilities = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "v0.9.16-update" }

# Common Pendulum types and utils
pendulum-common = { version = "0.1.0", default-features = false, path = "../../common/" }

[features]
default = ['std']
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-keystore",
	'orml-currencies/std',
	'orml-tokens/std',
	'orml-traits/std',
	'orml-utilities/std',
	'base64/std',
	'substrate-stellar-sdk/std',
	'pendulum-common/std'
]
